--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ pre {
         <p>snc</p>
         <pre>
             1.git remote, tapee
+            2.git remote add mini-pinghook http://server/pinghook.git
         </pre>
     </body>
 </html>
